# volatility-risk-engine

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
db/migrations/: 001_raw.sql  002_clean.sql  003_features.sql  004_forecasts.sql  005_ablation.sql  006_var.sql  007_sanity_checks.sql  008_raw_source.sql  009_dashboard.sql  010_live_forecasts.sql
docs/: powerbi_spec.md
src/volrisk/: __init__.py  config.py
src/volrisk/audit/: __init__.py  nse.py
src/volrisk/db/: __init__.py  engine.py  load_raw.py  loaders.py  migrate.py
src/volrisk/evaluate/: __init__.py  ablation.py  metrics.py  walkforward.py
src/volrisk/features/: __init__.py  build.py  build_features.sql  crosscheck.py
src/volrisk/ingest/: __init__.py  backfill.py  daily_update.py
src/volrisk/models/: __init__.py  baselines.py  ewma.py  feature_models.py  garch.py  har.py  lgbm.py  logspace.py
src/volrisk/providers/: __init__.py  base.py  stooq_provider.py  yfinance_provider.py
src/volrisk/risk/: __init__.py  backtest.py  kupiec.py  (+1 more)
tests/: conftest.py  test_ablation.py  test_backfill.py  test_baselines.py  test_cleaning.py  test_daily_update.py  test_dashboard.py  test_db.py  test_features.py  test_kupiec.py  test_logspace.py  test_nse_audit.py  test_placeholder.py  test_stooq_provider.py  test_validation.py  test_var.py  test_walkforward.py  test_yfinance_provider.py
tests/fixtures/: canonical_daily_corrupt.csv  stooq_daily_sample.csv  yfinance_daily_sample.csv
(+5 files in other folders)
