[project]
name = "volrisk"
version = "0.1.0"
description = "Volatility forecasting and risk analytics engine: daily OHLCV ingestion, next-day volatility forecasts (EWMA, GARCH, HAR-RV, LightGBM), and 1-day VaR with coverage backtesting."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Aakrisht Yadav" }]
dependencies = [
    "arch>=8.0.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.3",
    "pandas-market-calendars>=5.4.0",
    "pandera>=0.32.1",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "yfinance>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volrisk"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modern syntax)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["volrisk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
